// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder renders a large placeholder 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F9F9F9",
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 300,
        "justifyContent": "center",
        "width": 970,
      }
    }
  >
    watermark
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "#F9F9F9",
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#696969",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 11,
          "letterSpacing": 1.5,
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
          "position": "absolute",
        }
      }
    >
      ADVERTISEMENT
    </Text>
  </View>
</View>
`;

exports[`Placeholder renders a medium placeholder 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F9F9F9",
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 300,
        "justifyContent": "center",
        "width": 728,
      }
    }
  >
    watermark
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "#F9F9F9",
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#696969",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 11,
          "letterSpacing": 1.5,
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
          "position": "absolute",
        }
      }
    >
      ADVERTISEMENT
    </Text>
  </View>
</View>
`;

exports[`Placeholder renders a small placeholder 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F9F9F9",
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 300,
        "justifyContent": "center",
        "width": 300,
      }
    }
  >
    watermark
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "#F9F9F9",
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#696969",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 11,
          "letterSpacing": 1.5,
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
          "position": "absolute",
        }
      }
    >
      ADVERTISEMENT
    </Text>
  </View>
</View>
`;

exports[`Placeholder renders a tiny placeholder 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F9F9F9",
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "width": 100,
      }
    }
  >
    watermark
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "backgroundColor": "#F9F9F9",
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "#696969",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 11,
          "letterSpacing": 1.5,
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
          "position": "absolute",
        }
      }
    >
      ADVERTISEMENT
    </Text>
  </View>
</View>
`;
